Se agregan referencias de articulos y videos.

--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -26,5 +26,18 @@
         {% endfor %}
         
     </div>
+    
+    <h2>Referencias</h2>
+    
+    <ul>
+        <li>Artículos: http://www.blackwasp.co.uk/DesignPatternsArticles.aspx</li>
+        <li>Artículos: http://programacionsolida.com.ar/search/label/Design%20Patterns</li>
+        <li>Artículos: http://www.baluart.net/articulo/introduccion-a-los-patrones-de-diseno-con-php</li>
+        <li>Artículos: http://www.tutorialspoint.com/design_pattern/index.htm</li>
+        <li>Artículos: http://www.davidrojas.net/index.php/category/php/</li>
+        <li>Artículos: http://corey.quickshiftconsulting.com/1/post/2009/5/first-post.html - Simple Factory vs. Factory Method vs. Abstract Factory</li>
+        <li>Videos: http://www.youtube.com/watch?v=vNHpsC5ng_E</li>
+        <li>Videos: http://blip.tv/david-rojas-diseo-y-desarrollo-web/10-patrones-de-dise%C3%B1o-en-php-observer-pattern-3589425</li>
+    </ul> 
 
 {% endblock %}
