Se agregan las imagnes y la documentación. Se escriben algunas descripciones de SimpleFactory.

--- a/views/_patterns.html.twig
+++ b/views/_patterns.html.twig
@@ -11,6 +11,10 @@
         <div id="{{ pattern_id }}" class="accordion-body collapse">
             <div class="accordion-inner">
                 
+                {{ pattern.description }}
+                
+                <h6>Ejemplos:</h6>
+                
                 <dl>
                 
                 {% for example in pattern.examples %}
