Se agrega un ejemplo para Abstract Factory y uno para Facade.

--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -37,6 +37,7 @@
         <li>Artículos: http://www.davidrojas.net/index.php/category/php/</li>
         <li>Artículos: http://corey.quickshiftconsulting.com/1/post/2009/5/first-post.html - Simple Factory vs. Factory Method vs. Abstract Factory</li>
         <li>Artículos: http://web.cs.dal.ca/~jin/3132/lectures/dp-07.pdf - Simple Factory vs. Factory Method</li>
+        <li>Artículos: http://www.oodesign.com/</li>
         <li>Videos: http://www.youtube.com/watch?v=vNHpsC5ng_E</li>
         <li>Videos: http://blip.tv/david-rojas-diseo-y-desarrollo-web/10-patrones-de-dise%C3%B1o-en-php-observer-pattern-3589425</li>
     </ul> 
