Se agregan enlaces a articulos y videos como referencias.

--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -30,16 +30,23 @@
     <h2>Referencias</h2>
     
     <ul>
-        <li>Artículos: http://www.blackwasp.co.uk/DesignPatternsArticles.aspx</li>
-        <li>Artículos: http://programacionsolida.com.ar/search/label/Design%20Patterns</li>
-        <li>Artículos: http://www.baluart.net/articulo/introduccion-a-los-patrones-de-diseno-con-php</li>
-        <li>Artículos: http://www.tutorialspoint.com/design_pattern/index.htm</li>
-        <li>Artículos: http://www.davidrojas.net/index.php/category/php/</li>
-        <li>Artículos: http://corey.quickshiftconsulting.com/1/post/2009/5/first-post.html - Simple Factory vs. Factory Method vs. Abstract Factory</li>
-        <li>Artículos: http://web.cs.dal.ca/~jin/3132/lectures/dp-07.pdf - Simple Factory vs. Factory Method</li>
-        <li>Artículos: http://www.oodesign.com/</li>
-        <li>Videos: http://www.youtube.com/watch?v=vNHpsC5ng_E</li>
-        <li>Videos: http://blip.tv/david-rojas-diseo-y-desarrollo-web/10-patrones-de-dise%C3%B1o-en-php-observer-pattern-3589425</li>
+        <li>http://www.blackwasp.co.uk/DesignPatternsArticles.aspx</li>
+        <li>http://programacionsolida.com.ar/search/label/Design%20Patterns</li>
+        <li>http://www.baluart.net/articulo/introduccion-a-los-patrones-de-diseno-con-php</li>
+        <li>http://www.tutorialspoint.com/design_pattern/index.htm</li>
+        <li>http://www.davidrojas.net/index.php/category/php/</li>
+        <li>http://corey.quickshiftconsulting.com/1/post/2009/5/first-post.html - Simple Factory vs. Factory Method vs. Abstract Factory</li>
+        <li>http://web.cs.dal.ca/~jin/3132/lectures/dp-07.pdf - Simple Factory vs. Factory Method</li>
+        <li>http://www.oodesign.com/proxy-pattern.html</li>
+        <li>http://javapostsforlearning.blogspot.com/2012/09/bridge-design-pattern-in-java.html</li>
+        <li>http://www.tutorialspoint.com/design_pattern/flyweight_pattern.htm</li>
+        <li>http://www.oodesign.com/proxy-pattern.html</li>
+        <li>http://www.newthinktank.com/2012/09/facade-design-pattern-tutorial/</li>
+        <li>http://www.blackwasp.co.uk/State_2.aspx</li>
+        <li>http://www.oodesign.com/</li>
+        <li>http://desarrolladorsenior.blogspot.com/2009/09/patron-simple-factory-en-php5.html</li>
+        <li>http://www.youtube.com/watch?v=vNHpsC5ng_E</li>
+        <li>http://blip.tv/david-rojas-diseo-y-desarrollo-web/10-patrones-de-dise%C3%B1o-en-php-observer-pattern-3589425</li>
     </ul> 
 
 {% endblock %}
