Nuevas referencias. Formateo de carpetas con código php.

--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -31,13 +31,15 @@
     
     <ul>
         <li>http://www.davidrojas.net/index.php/category/php/</li>
-        <li>http://www.baluart.net/articulo/introduccion-a-los-patrones-de-diseno-con-php</li>
+        <li>http://www.baluart.net/articulo/introduccion-a-los-patrones-de-diseno-con-php (Español)</li>
+        <li>http://net.tutsplus.com/articles/general/a-beginners-guide-to-design-patterns/ (Inglés)</li>
         <li>http://www.tutorialspoint.com/design_pattern/index.htm</li>
         <li>http://www.newthinktank.com/videos/design-patterns-tutorial/</li>
         <li>http://www.blackwasp.co.uk/DesignPatternsArticles.aspx</li>
         <li>http://www.oodesign.com/</li>
         <li>http://programacionsolida.com.ar/search/label/Design%20Patterns</li>
         <li>http://javapostsforlearning.blogspot.in/</li>
+        <li>http://en.wikipedia.org/wiki/Design_pattern_%28computer_science%29</li>
         
         <li>http://corey.quickshiftconsulting.com/1/post/2009/5/first-post.html - Simple Factory vs. Factory Method vs. Abstract Factory</li>
         <li>http://web.cs.dal.ca/~jin/3132/lectures/dp-07.pdf - Simple Factory vs. Factory Method</li>
