--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -5,6 +5,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="js/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+        <link href="js/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
     </head>
     <body>
         
