--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -44,6 +44,7 @@
         <li>http://corey.quickshiftconsulting.com/1/post/2009/5/first-post.html - Simple Factory vs. Factory Method vs. Abstract Factory</li>
         <li>http://web.cs.dal.ca/~jin/3132/lectures/dp-07.pdf - Simple Factory vs. Factory Method</li>
         <li>http://desarrolladorsenior.blogspot.com/2009/09/patron-simple-factory-en-php5.html - Simple Factory</li>
+        <li>http://www.coderanch.com/t/151598/java-Architect-SCEA/certification/Builder-Strategy-Patterns - Diferencia entre Builder y Strategy</li>
         
     </ul> 
 
