Se cargan los ejemplos del patrón Observer. Se agregan sitios de referencia.

--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -40,11 +40,13 @@
         <li>http://programacionsolida.com.ar/search/label/Design%20Patterns</li>
         <li>http://javapostsforlearning.blogspot.in/</li>
         <li>http://en.wikipedia.org/wiki/Design_pattern_%28computer_science%29</li>
+        <li>http://www.youtube.com/user/zapatterns?feature=watch</li>
         
         <li>http://corey.quickshiftconsulting.com/1/post/2009/5/first-post.html - Simple Factory vs. Factory Method vs. Abstract Factory</li>
         <li>http://web.cs.dal.ca/~jin/3132/lectures/dp-07.pdf - Simple Factory vs. Factory Method</li>
         <li>http://desarrolladorsenior.blogspot.com/2009/09/patron-simple-factory-en-php5.html - Simple Factory</li>
         <li>http://www.coderanch.com/t/151598/java-Architect-SCEA/certification/Builder-Strategy-Patterns - Diferencia entre Builder y Strategy</li>
+        <li>http://www.youtube.com/watch?v=0y9Ws31aC3o - Observer Pattern</li>
         
     </ul> 
 
